# ocaml_exercises

./: .gitignore  .ocamlformat  MEMO.md  Makefile  README.md  learn.opam
atcoder/: abc081_a.ml  abc081_b.ml  abc085_b.ml  abc085_c.ml  abc086_a.ml  abc088_b.ml  amc12_2001.ml  arc065_a.ml
lib/: dune  factorial.ml  fibonacci.ml  fun_args.ml  merge_list.ml  power.ml  square_distance.ml  sum_list.ml
problems/: 10001st_prime_number.ml  1000_digit_fibonacci_number.ml  abc083_b.ml  aoj_0521_change.ml  arc089_a.ml  divisors.ml  duplicates.ml  even_fibonacci_number.ml  factorial_digit_sum.ml  filesplit.ml  gcd.ml  highly_divisible_triangular_number_2.ml  immutable_vairables.ml  is_prime_sieve.ml  largest_prime_factor.ml  lattice_paths.ml  lcm.ml  lexicographic_permutations_wa.ml  lexicographic_permutations_wa2.ml  list_sort.ml  maximum_path_sum_1.ml  non_abundant_sum.ml  npr.ml  play_big_int.ml  quadratic_primes.ml  set.ml  summation_of_primes.ml  summation_of_primes_big_int.ml
projecteuler/: .ocamlformat  abc087_b.ml  amicable_numbers.ml  average.ml  big_int_factorial_2.ml  duplicates.ml  factor.ml  fibonacci.ml  fizz_buzz.ml  head_tail.ml  highly_divisible_triangular_number.ml  is_prime_sieve_big.ml  is_prime_sieve_big_int.ml  is_prime_sieve_int64.ml  large_sum.ml  largest_palindrome_product.ml  largest_prime_factor_big.ml  largest_prime_factor_big_int.ml  largest_product_in_a_series.ml  list_fold.ml  longest_collatz_sequence.ml  map.ml  multiples_of_3_or_5.ml  ncr.ml  polymophism.ml  power_digit_sum.ml  roman_chars_to_int.ml  smallest_multiple_2.ml  summation_of_primes.ml  (+5 more)
(+53 files in other folders)
