opam-version: "2.0"
maintainer: "kis9ax@gmail.com"
authors: ["kis9a"]
homepage: "https://github.com/kis9a/learn-ocaml"
license: "MIT"
description: ""
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "ocamlformat" { >= "0.17.0" }
  "alcotest" {with-test}
]
