opam-version: "2.0"
maintainer: "kis9ax@gmail.com"
authors: ["kis9a"]
license: "MIT"
description: "Ocaml snippets"
synopsis: "Ocaml snippets"
homepage: "https://github.com/kis9a/ocaml-snippets"
bug-reports: "https://github.com/kis9a/ocaml-snippets"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "ocamlformat" { >= "0.17.0" }
  "alcotest" {with-test}
]
